Partial fix of broken isVisible support

--- a/frameworks/foundation/english.lproj/view.css
+++ b/frameworks/foundation/english.lproj/view.css
@@ -36,5 +36,5 @@
 }
 
 .sc-view.hidden {
-  display: none;
+  display: none !important;
 }
